added tests and styling

--- a/index.html
+++ b/index.html
@@ -20,55 +20,75 @@
         style="height: 120px;background-color: rgb(184, 61, 61);color: white;text-align: center;text-emphasis: bold;font-size: 50px; padding-top: 20px;margin-bottom: 50px;">
         My Team
     </div>
-    <div class row>
-        <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
-            <div class="card-header bg-primary mb-3 text-white"
-                style="font-size: large;font-family: Arial, Helvetica, sans-serif;">Chris<br><i
-                    class="fas fa-coffee"></i> Manager</div>
-            <div class="card-body" style="background-color: rgb(238, 234, 234);">
-                <div class="row" style="background-color: white; margin-bottom: 1px;">ID: 1</div>
-                <div class="row" style="background-color: white;margin-bottom: 1px">Email: chris@mail.com</div>
-                <div class="row" style="background-color: white;margin-bottom: 1px">Office Number: 12312</div>
+
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="card p-0"
+                style="max-width: 14rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">chris<br><i
+                        class="fas fa-coffee"></i> Manager</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: 3</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: fadsfsda</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Office Number: fdsadas</div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
-        <div class="card-header bg-primary mb-3 text-white"
-            style="font-size: large;font-family: Arial, Helvetica, sans-serif;">Pete<br><i class="fas fa-glasses"></i>
-            Engineer</div>
-        <div class="card-body" style="background-color: rgb(238, 234, 234);">
-            <div class="row" style="background-color: white; margin-bottom: 1px;">ID: 2</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">Email: Pete@mail.com</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: petehub</div>
-        </div>
-    </div>
-    </div>
-    <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
-        <div class="card-header bg-primary mb-3 text-white"
-            style="font-size: large;font-family: Arial, Helvetica, sans-serif;">Jen<br><i class="fas fa-glasses"></i>
-            Engineer</div>
-        <div class="card-body" style="background-color: rgb(238, 234, 234);">
-            <div class="row" style="background-color: white; margin-bottom: 1px;">ID: 3</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">Email: jen@mail.com</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: jenHub</div>
-        </div>
-    </div>
-    </div>
-    <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
-        <div class="card-header bg-primary mb-3 text-white"
-            style="font-size: large;font-family: Arial, Helvetica, sans-serif;">Alex<br><i
-                class="fas fa-user-graduate"></i>
-            Intern</div>
-        <div class="card-body" style="background-color: rgb(238, 234, 234);">
-            <div class="row" style="background-color: white; margin-bottom: 1px;">ID: 4</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">Email: alex@mail.com</div>
-            <div class="row" style="background-color: white;margin-bottom: 1px">School: unc</div>
-        </div>
-    </div>
-    </div>
+            <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">adfadsfs<br><i
+                        class="fas fa-glasses"></i> Engineer</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: dsfdas</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: dsfads</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: adsfdas</div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">adfadsfs<br><i
+                        class="fas fa-glasses"></i> Engineer</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: dsfdas</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: dsfads</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: adsfdas</div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">adfadsfs<br><i
+                        class="fas fa-glasses"></i> Engineer</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: dsfdas</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: dsfads</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: adsfdas</div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">dsafdsf<br><i
+                        class="fas fa-user-graduate"></i> Intern</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: dsfasd</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: sdfadsf</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">School: sadfasfd</div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 18rem;background-color: rgb(238, 234, 234);float: left;margin: 5px;">
+                <div class="card-header bg-primary mb-3 text-white"
+                    style="font-size: large;font-family: Arial, Helvetica, sans-serif;">dasfdafs<br><i
+                        class="fas fa-glasses"></i> Engineer</div>
+                <div class="card-body" style="background-color: rgb(238, 234, 234);">
+                    <div class="row" style="background-color: white; margin-bottom: 1px;">ID: sdfdasf</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">Email: dsfsadf</div>
+                    <div class="row" style="background-color: white;margin-bottom: 1px">GitHub: dsafsad</div>
+                </div>
+            </div>
 
-    </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
